--- a/index.html
+++ b/index.html
@@ -22,21 +22,24 @@
                     <li><a href="#"><button>Sign Up</button></a></li>
                 </ul>
         </header>
-
+        <div class="margin">
         <div class="intro">
-        <a>
-            <p>Home</p><br>
-            <h1>FinEase</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<p>
-        </a>
-        </div>
+            <a>
+                <p>Home</p><br>
+                <h1>FinEase</h1>
+                <p>We compare 100+ credit cards and get expert guides and news from Finder's credit card journalists.<p>
+            </a>
+            </div>
+            <br>
+            <div class="grid-container1">
+                <div class="grid-item"><a>Item1</a></div>
+                <div class="grid-item"><a>Item2</a></div>
+                <div class="grid-item"><a>Item3</a></div>
+            </div>
+            <div class="grid-container2">
+                <div class="grid-item"><a>Item4</a></div>
+                <div class="grid-item"><a>Item5</a></div>
 
-        <div class="grid-container">
-            <div class="grid-item"><a>Item2</a></div>
-            <div class="grid-item"><a>Item2</a></div>
-            <div class="grid-item"><a>Item3</a></div>
-            <div class="grid-item"><a>Item4</a></div>
-            <div class="grid-item"><a>Item5</a></div>
         </div>
     </body>
 </html>
