feat: implemented colors

--- a/index.html
+++ b/index.html
@@ -24,22 +24,25 @@
         </header>
         <div class="margin">
         <div class="intro">
+            <div class="background-block">
             <a>
                 <p>Home</p><br>
-                <h1>FinEase</h1>
-                <p>We compare 100+ credit cards and get expert guides and news from Finder's credit card journalists.<p>
+                <h1>FinEase</h1><br><br>
+                <p>A One-Stop Financial Products Comparison and Information Consolidation Website for Better Financial Planning.<p>
             </a>
+            </div>
             </div>
             <br>
             <div class="grid-container1">
-                <div class="grid-item"><a>Item1</a></div>
-                <div class="grid-item"><a>Item2</a></div>
-                <div class="grid-item"><a>Item3</a></div>
+                <div class="grid-item"><a>Best Cards</a></div>
+                <div class="grid-item"><a>Latest Offers</a></div>
+                <div class="grid-item"><a>Analyze Data</a></div>
             </div>
             <div class="grid-container2">
                 <div class="grid-item"><a>Item4</a></div>
                 <div class="grid-item"><a>Item5</a></div>
 
         </div>
+
     </body>
 </html>
