--- a/index.html
+++ b/index.html
@@ -22,27 +22,25 @@
                     <li><a href="#"><button>Sign Up</button></a></li>
                 </ul>
         </header>
+        <div class="background-block">
         <div class="margin">
-        <div class="intro">
-            <div class="background-block">
-            <a>
-                <p>Home</p><br>
-                <h1>FinEase</h1><br><br>
-                <p>A One-Stop Financial Products Comparison and Information Consolidation Website for Better Financial Planning.<p>
-            </a>
+            <div class="intro">
+                <a>
+                    <h1>FinEase</h1>
+                    <h2><p>A One-stop financial products comparison and information consolidation website for better financial planning.</h2><p>
+                </a>
             </div>
             </div>
-            <br>
-            <div class="grid-container1">
-                <div class="grid-item"><a>Best Cards</a></div>
-                <div class="grid-item"><a>Latest Offers</a></div>
-                <div class="grid-item"><a>Analyze Data</a></div>
-            </div>
-            <div class="grid-container2">
-                <div class="grid-item"><a>Item4</a></div>
-                <div class="grid-item"><a>Item5</a></div>
-
+                <br>
+                <div class="grid-container1">
+                    <div class="grid-item"><a>Best Cards</a></div>
+                    <div class="grid-item"><a>Latest Offers</a></div>
+                    <div class="grid-item"><a>Analyze Data</a></div>
+                </div>
+                <div class="grid-container2">
+                    <div class="grid-item"><a>Item4</a></div>
+                    <div class="grid-item"><a>Item5</a></div>
         </div>
-
+        </body>
     </body>
 </html>
