added working compare cards page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles/homepage.css">
     </head>
     <body>
         <header>
@@ -28,11 +28,10 @@
             <div class="intro">
                 <a>
                     <h1>FinEase</h1>
-                    <h2><p>A One-stop financial products comparison and information consolidation website for better financial planning.</h2><p>
-                    
+                    <h2>A One-stop financial products comparison and information consolidation website for better financial planning.</h2>
                     </a>
-            </div>
-            </div>
+        </div>
+        </div>
                 <br>
                 <div class="grid-container1">
                     <div class="grid-item">
