added two new pages

--- a/best-cards.html
+++ b/best-cards.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a class="logo" href="#"><img class="logo.svg" src="images/logo.svg"></a>
+        <a class="logo" href="index.html"><img class="logo.svg" src="images/logo.svg"></a>
         <nav>
             <ul class="nav__links">
                 <li><a href="#">Services</a></li>
@@ -32,34 +32,34 @@
         <div class="box">
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/bpicard.png"></div>
-                <h3>BPI</h3>
+                <h3>BPI Debit Card</h3>
                 <ul>
                     <li>- Convenient payment methods</li>
                     <li>- Secure account management</li>
                     <li>- Exclusive deals and discounts at partner stores</li>
                 </ul>
-                <a href="#">Visit BPI</a>
+                <a href="https://www.bpi.com.ph/personal/cards/debit-cards" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/bdocard.png"></div>
-                <h3>BDO</h3>
+                <h3>BDO Debit Card</h3>
                 <ul>
                     <li>- Debit card control and customize features in real-time</li>
                     <li>- E-commerce access through BPI Online or mobile app</li>
                     <li>- Contactless features</li>
                     <li>- Variety of seasonal promotions</li>
                 </ul>
-                <a href="#">Visit BDO</a>
+                <a href="https://www.bdo.com.ph/personal/cards/debit-card?utm_source=google&utm_medium=rsa&utm_campaign=dcacjdd&gad=1&gclid=CjwKCAjwhJukBhBPEiwAniIcNRdo3bDiPJG9VMm3tD2SUXyyIyVHH0jSbeS-aqarvoTyya5Fb3TqbBoCRaIQAvD_BwE" target="_blank">Visit BDO</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/landbankcaRD.png"></div>
-                <h3>Landbank</h3>
+                <h3>Landbank Debit Card</h3>
                 <ul>
                     <li>- Allows online purchases, in-store, by phone or mail order.</li>
                     <li>- Increased card security</li>
                     <li>- Convenient access at home and overseas</li>
                 </ul>
-                <a href="#">Visit Landbank</a>
+                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">Visit Landbank</a>
             </div>
         </div>
     </div>
@@ -72,7 +72,7 @@
     <div class="wrapper">
         <div class="box">
             <div class="single-box">
-                <div class="img"><img alt="Round_neck" src="images/BPIshopmore.png"></div>
+                <div class="img"><img alt="Round_neck" src="images/image_mc_platinum_cardv2.png"></div>
                 <h3>BPI ShopMore Mastercard</h3>
                 <ul>
                     <li>- Low membership fee of P150/month </li>
@@ -80,10 +80,10 @@
                     <li>- Flexible installment programs</li>
 					<li>- Secure online shopping</li>
                 </ul>
-                <a href="#">Visit BPI</a>
+                <a href="https://www.bpi.com.ph/personal/cards/credit-cards/bpi-platinum-rewards-mastercard" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
-                <div class="img"><img alt="Round_neck" src="images/image_mc_platinum_cardv2.png"></div>
+                <div class="img"><img alt="Round_neck" src="images/BDOshopmore.png"></div>
                 <h3>BDO Platinum Rewards Card</h3>
                 <ul>
                     <li>- Lowest interest rate at 3% per month</li>
@@ -91,7 +91,7 @@
                     <li>- Electronic Statement of Account</li>
 					<li>- Loyalty programs and Easy Pay programs</li>
                 </ul>
-                <a href="#">Visit BDO</a>
+                <a href="https://www.bdo.com.ph/personal/cards/credit-cards/mastercard/shopmore" target="_blank">Visit BDO</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/landbankcaRD.png"></div>
@@ -101,7 +101,7 @@
                     <li>- Increased card security</li>
                     <li>- Convenient access at home and overseas</li>
                 </ul>
-                <a href="#">Visit Landbank</a>
+                <a href="https://www.landbank.com/cards/landbank-credit-card" target="_blank">Visit Landbank</a>
             </div>
         </div>
     </div>
