--- a/index.html
+++ b/index.html
@@ -34,28 +34,29 @@
         </div>
                 <br>
                 <div class="grid-container1">
-                    <div class="grid-item">
+                    <div class="grid-item"><a href="best-cards.html">
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Best Cards.png">
                         </div>
-                        </i>
-                        <div class = "text-wrapper">
-                            <a>Best Cards</a>      
+                        <div class="text-wrapper">
+                            <a href="best-cards.html">Best Cards</a>      
                         </div>
                     </div>
-                    <div class="grid-item">
+                </a>
+                <div class="grid-item"><a href="Loans.html">
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Loan.png">
                         </div>
-                        <div class = "text-wrapper">
-                            <a>Loans</a>                       
+                        <div class="text-wrapper">
+                            <a href="Loans.html">Loans</a>                       
                         </div>
                     </div>
+                </a>
                     <div class="grid-item">
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Insurance.png">
                         </div>
-                        <div class = "text-wrapper">
+                        <div class="text-wrapper">
                             <a>Insurance</a>
                         </div>
                     </div>
@@ -65,7 +66,7 @@
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Investment.png">
                         </div>
-                        <div class = "text-wrapper">
+                        <div class="text-wrapper">
                             <a>Investments</a>                            
                         </div>
                     </div>
@@ -73,7 +74,7 @@
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Latest Offers.png">
                         </div>
-                        <div class = "text-wrapper">
+                        <div class="text-wrapper">
                             <a>Latest Offers</a>                            
                         </div>
                     </div>
@@ -81,11 +82,11 @@
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Analyze Data.png">
                         </div>
-                        <div class = "text-wrapper">
+                        <div class="text-wrapper">
                             <a>Analyze Data</a>                            
                         </div>
                     </div>
+                </div>
         </div>
-        </body>
     </body>
 </html>
