feat: working main features except for Latest Offers and Analyze Data

--- a/Insurance.html
+++ b/Insurance.html
@@ -3,7 +3,7 @@
 <!--divinectorweb.com-->
 <head>
     <meta charset="UTF-8">
-    <title>Loans | FinEase</title>
+    <title>Insurance | FinEase</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="styles/comparisons.css">    
@@ -24,7 +24,7 @@
     </header>
 	<div class="intro">
 		<a>
-			<h1>Compare Personal Loans</h1>
+			<h1>Compare Life Insurance Benefits</h1>
 		</a>
 	</div>
     <br>
@@ -32,33 +32,31 @@
         <div class="box">
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BPIlogo.png"></div>
-                <h3>BPI Personal Loans</h3>
+                <h3>BPI Life Protect Health Direct</h3>
                 <ul>
-                    <li>- High loanable amount from <strong>P15,000 to P3 million</strong></li>
-                    <li>- Flexible terms of <strong>12, 18, 24, 30, or 36 monthly </strong>installments</li>
-                    <li>- Low monthly add-on rate of <strong>1.2%</strong></li>
-                    <li>- No collateral or guarantor needed</li>
-                    <li>- No income documents required for credit cardholders</li>
-                    <li>- Hassle-free repayments through automatic debit facility</li>
-
+                    <li>- Cash assistance options</li>
+                    <li>- Financial protection</li>
+                    <li>- Terminal illness and other benefits</li>
+                    <li>- Affordable premiums</li>
+                    <li>- Convenience of purchase</li>
                 </ul>
                 <a href="https://www.bpi.com.ph/personal/loans/personal-loan" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BDOlogo.png"></div>
-                <h3>BDO Personal Loans</h3>
+                <h3>BDO Life</h3>
                 <ul>
-                    <li>- Low interest rates and easy payment terms</li>
-                    <li>- Avail up to <strong>P2 million</strong></li>
-                    <li>- Opt for <strong>6,12,18, 24, 36-month </strong> terms</li>
+                    <li>- View realtime fund prices</li>
+                    <li>- Connect with financial advisors</li>
+                    <li>- File claims and download convenient forms</li>
                 </ul>
-                <a href="https://www.bdo.com.ph/personal/loans/personal-loan" target="_blank">Visit BDO</a>
+                <a href="https://www.bdo.com.ph/bdo-life" target="_blank">Visit BDO</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/landbankLogo.png"></div>
-                <h3>Landbank Personal Loans</h3>
-                    <div class="disclaimer"></div></disclaimer><h2>Loans only available for Farmers, Housing and Business. No existing data on personal loans</h2>
-                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">Visit Landbank</a>
+                <h3>Landbank Life Insurance</h3>
+                    <div class="disclaimer"></div></disclaimer><h2>No data on existing life insurance</h2>
+                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">:(</a>
             </div>
         </div>
     </div>
