--- a/Investments.html
+++ b/Investments.html
@@ -3,7 +3,7 @@
 <!--divinectorweb.com-->
 <head>
     <meta charset="UTF-8">
-    <title>Loans | FinEase</title>
+    <title>Investments | FinEase</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="styles/comparisons.css">    
@@ -24,7 +24,7 @@
     </header>
 	<div class="intro">
 		<a>
-			<h1>Compare Personal Loans</h1>
+			<h1>Compare Life Insurance Benefits</h1>
 		</a>
 	</div>
     <br>
@@ -32,32 +32,34 @@
         <div class="box">
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BPIlogo.png"></div>
-                <h3>BPI Personal Loans</h3>
+                <h3>BPI</h3>
                 <ul>
-                    <li>- High loanable amount from <strong>P15,000 to P3 million</strong></li>
-                    <li>- Flexible terms of <strong>12, 18, 24, 30, or 36 monthly </strong>installments</li>
-                    <li>- Low monthly add-on rate of <strong>1.2%</strong></li>
-                    <li>- No collateral or guarantor needed</li>
-                    <li>- No income documents required for credit cardholders</li>
-                    <li>- Hassle-free repayments through automatic debit facility</li>
+                    <li>- Choose from over <strong>25</strong> best managed investment funds in local and global markets</li>
+                    <li>- Invest as low as <strong>P10,000</strong> in Unit Investment Trust Fund (UITF)</li>
+                    <li>- As low as <strong>P5,000 </strong>to access portfolios of stocks, brands, and other financial assets</li>
 
+                    
                 </ul>
                 <a href="https://www.bpi.com.ph/personal/loans/personal-loan" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BDOlogo.png"></div>
-                <h3>BDO Personal Loans</h3>
+                <h3>BDO</h3>
                 <ul>
-                    <li>- Low interest rates and easy payment terms</li>
-                    <li>- Avail up to <strong>P2 million</strong></li>
-                    <li>- Opt for <strong>6,12,18, 24, 36-month </strong> terms</li>
+                    <li>- Invest in both <strong>local and foreign </strong> Unit Investment Trust Funds (UITF)</li>
+                    <li>- Easy Investment Plans (EIP) for as low as <strong>P1,000</strong></li>
+                    <li>- Access investor tools to find out <strong>performance of current investments</strong></li>
+                    <li>- Advisory services</li>
                 </ul>
-                <a href="https://www.bdo.com.ph/personal/loans/personal-loan" target="_blank">Visit BDO</a>
+                <a href="https://www.bdo.com.ph/bdo-life" target="_blank">Visit BDO</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/landbankLogo.png"></div>
-                <h3>Landbank Personal Loans</h3>
-                    <div class="disclaimer"></div></disclaimer><h2>Loans only available for Farmers, Housing and Business. No existing data on personal loans</h2>
+                <h3>Landbank</h3>
+                <ul>
+                    <li>- Diversified portfolio</li>
+                    <li>- Access to Unit Investment Trust Fund (UITF), money market funds, fixed income funds, multi-asset funds and equity funds</li>
+                </ul>
                 <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">Visit Landbank</a>
             </div>
         </div>
