--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>FinEase</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -52,24 +52,24 @@
                         </div>
                     </div>
                 </a>
-                    <div class="grid-item">
+                    <div class="grid-item"><a href="Insurance.html">
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Insurance.png">
                         </div>
                         <div class="text-wrapper">
                             <a>Insurance</a>
                         </div>
-                    </div>
+                    </div></a>
                 </div>
                 <div class="grid-container1">
                     <div class="grid-item">
-                        <div class="icon-wrapper">
+                        <div class="icon-wrapper"><a href="Investments.html">
                             <img class="icons" src="images/Investment.png">
                         </div>
                         <div class="text-wrapper">
                             <a>Investments</a>                            
                         </div>
-                    </div>
+                    </div></a>
                     <div class="grid-item">
                         <div class="icon-wrapper">
                             <img class="icons" src="images/Latest Offers.png">
