--- a/best-cards.html
+++ b/best-cards.html
@@ -3,7 +3,7 @@
 <!--divinectorweb.com-->
 <head>
     <meta charset="UTF-8">
-    <title>Responsive E-Commerce product card ui design using HTML CSS</title>
+    <title>Best Cards | FinEase</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/homepage.css">
     <link rel="stylesheet" href="styles/comparisons.css">    
