chore: added gradient header and changed some colors

--- a/Insurance.html
+++ b/Insurance.html
@@ -40,7 +40,7 @@
                     <li>- Affordable premiums</li>
                     <li>- Convenience of purchase</li>
                 </ul>
-                <a href="https://www.bpi.com.ph/personal/loans/personal-loan" target="_blank">Visit BPI</a>
+                <a href="https://www.bpi.com.ph/personal/insurance" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BDOlogo.png"></div>
@@ -56,7 +56,7 @@
                 <div class="img"><img alt="Round_neck" src="images/landbankLogo.png"></div>
                 <h3>Landbank Life Insurance</h3>
                     <div class="disclaimer"></div></disclaimer><h2>No data on existing life insurance</h2>
-                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">:(</a>
+                <a href="#">:(</a>
             </div>
         </div>
     </div>
