--- a/Investments.html
+++ b/Investments.html
@@ -24,7 +24,7 @@
     </header>
 	<div class="intro">
 		<a>
-			<h1>Compare Life Insurance Benefits</h1>
+			<h1>Compare Investments</h1>
 		</a>
 	</div>
     <br>
@@ -40,7 +40,7 @@
 
                     
                 </ul>
-                <a href="https://www.bpi.com.ph/personal/loans/personal-loan" target="_blank">Visit BPI</a>
+                <a href="https://www.bpi.com.ph/personal/investments" target="_blank">Visit BPI</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/BDOlogo.png"></div>
@@ -51,7 +51,7 @@
                     <li>- Access investor tools to find out <strong>performance of current investments</strong></li>
                     <li>- Advisory services</li>
                 </ul>
-                <a href="https://www.bdo.com.ph/bdo-life" target="_blank">Visit BDO</a>
+                <a href="https://www.bdo.com.ph/trust-and-investments" target="_blank">Visit BDO</a>
             </div>
             <div class="single-box">
                 <div class="img"><img alt="Round_neck" src="images/landbankLogo.png"></div>
@@ -60,7 +60,7 @@
                     <li>- Diversified portfolio</li>
                     <li>- Access to Unit Investment Trust Fund (UITF), money market funds, fixed income funds, multi-asset funds and equity funds</li>
                 </ul>
-                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">Visit Landbank</a>
+                <a href="https://www.landbank.com/treasury/advantages-of-investing-thru-landbank" target="_blank">Visit Landbank</a>
             </div>
         </div>
     </div>
