--- a/Loans.html
+++ b/Loans.html
@@ -58,7 +58,7 @@
                 <div class="img"><img alt="Round_neck" src="images/landbankLogo.png"></div>
                 <h3>Landbank Personal Loans</h3>
                     <div class="disclaimer"></div></disclaimer><h2>Loans only available for Farmers, Housing and Business. No existing data on personal loans</h2>
-                <a href="https://www.landbank.com/cards/landbank-emv-enabled-visa-debit-card" target="_blank">Visit Landbank</a>
+                <a href="https://www.landbank.com/loans" target="_blank">Visit Landbank</a>
             </div>
         </div>
     </div>
